# agent-fleet-orchestrator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/implementation/: adr-007-toolserver-auth.md  agent-assignments.md  architecture.md  design-system.md  design.md  implementation-plan.md  requirements.md  research.md  validation-plan.md  validation-report.md
docs/ops/: deploy.md  handoff.md  restore.md
docs/prompts/: developer.md  junior-developer.md  reviewer.md  team-lead.md  tester.md
docs/reference/: clean-state-checklist.md  evaluator-rubric.md  layered-domain-architecture.md  quality-document.md
docs/reviews/: 2026-06-30-2015-repo-engineering-review.md  2026-07-01-1831-repo-engineering-review.md  p2-fix-plan.md  (+8 more)
fleet/: cli.py  config.py  db.py  main.py  models.py
tests/: conftest.py  test_adversarial_inputs.py  test_agent_lifecycle.py  test_approvals.py  test_b2_schema_time.py  test_b3_async_hygiene.py  test_b4_sse_robustness.py  test_b5_budget_gate.py  test_b6_restore_role.py  test_b7_correctness_pair.py  test_backup_restore.py  test_boot_smoke.py  test_budget.py  test_c1_api_consistency.py  test_c2_auth_negative.py  test_c2_hibernate_transition.py  test_c3_spawn_worker_failure.py  test_c4_readme_routes.py  test_chaos_recovery.py  test_claude_adapter.py  test_claude_backend_fixes.py  test_cli.py  test_compaction.py  test_concurrency_fixes.py  test_config.py  test_dashboard_smoke.py  test_db.py  test_events.py  test_identity_binding.py  test_inbox.py  test_main_wiring.py  test_mcp_policy_fixes.py  test_merge_gate.py  test_merge_gate_fixes.py  test_mock_backend.py  test_orchestration.py  test_p0_1_xss_escape.py  test_p0_2_identity_attribution.py  test_p0_3_evidence_sha.py  test_p0_3_wiring.py  (+11 more)
(+104 files in other folders)
