[project]
name = "fleet"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mcp>=1.0",
    "anthropic>=0.30",
    "jinja2>=3.1",
    "sse-starlette>=2.1",
    "httpx2>=2.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "playwright>=1.44",
    "anyio[trio]>=4.4",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff.lint]
select = ["E","W","F","I","B","UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: requires real API keys", "slow: long-running"]
