[project]
name = "fleet"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mcp>=1.0",
    "anthropic>=0.30",
    "jinja2>=3.1",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "playwright>=1.44",
    "anyio[trio]>=4.4",
    "types-pyyaml>=6.0.12.20260518",
    "pytest-playwright>=0.8.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff.lint]
select = ["E","W","F","I","B","UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not live and not slow'"
markers = ["live: requires real API keys", "slow: long-running", "smoke: full-app boot-and-smoke tests"]
